<resources>
    <string name="app_name">BCAAS</string>
    <string name="unlock">Unlock wallet</string>
    <string name="unlock_tv">Unlock</string>
    <string name="password">Password</string>
    <string name="create_wallet_tv">Create</string>
    <string name="create_new_wallet">Create a new wallet</string>
    <string name="import_wallet">Import wallet</string>
    <string name="import_wallet_tv">Import</string>
    <string name="warning">Warning</string>
    <string name="create_wallet_dialog_message">Creating wallet will remove all information from your existing wallet! If you have funds in your current wallet, make sure you have a backup to restore from.</string>
    <string name="import_wallet_dialog_message">Importing wallet will remove all information from your existing wallet! If you have funds in your current wallet, make sure you have a backup to restore from.</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="please_enter_password_again">Enter your password again</string>
    <string name="password_input_rule_remind">This password is used to encrypt wallet information and unlock the wallet, please store it securely!</string>
    <string name="account_address">Account address</string>
    <string name="receiving_account">Receiving account</string>
    <string name="account_address_en">Address</string>
    <string name="backup_private_key">Backup your private key</string>
    <string name="backup_private_key_detail">This private key is used to restore the wallet when you forget password,lost private key means lost funds.We suggest you store the private key securely or even write it down on paper.</string>
    <string name="finish">Complete</string>
    <string name="enter_private_key">Enter your private key</string>
    <string name="set_password_for_your_wallet">Please set password for your wallet</string>
    <string name="my_account_address">My account address</string>
    <string name="my_account_address_tv">Address</string>
    <string name="my_account_address_en">Address</string>
    <string name="account_balance">Balance</string>
    <string name="account_balance_tv">Balance</string>
    <string name="home">Home</string>
    <string name="browse">Home</string>
    <string name="receive">Receive</string>
    <string name="scan">Scan</string>
    <string name="send">Send</string>
    <string name="settings">Settings</string>
    <string name="receive_account">Receiving account</string>
    <string name="transaction_amount">Transaction amount</string>
    <string name="view_wallet_info">Wallet info</string>
    <string name="address_manager">Address management</string>
    <string name="modify_password">Change password</string>
    <string name="save_private_key_hint">We suggest you write down the private key on a paper and store it securely in case of loss.</string>
    <string name="send_email">Send by email</string>
    <string name="send_wallet_file_by_email">Send wallet file by email</string>
    <string name="email_json_rule">When the APP is deleted,this file is used to restore the wallet. We suggest you backup this file by email.</string>
    <string name="insert_address">Add account address</string>
    <string name="change_representatives">Change representative</string>
    <string name="address_alias">Account alias</string>
    <string name="save">Save</string>
    <string name="Language_switching">Language</string>
    <string name="password_error">Password error</string>
    <string name="enter_error">Input error</string>
    <string name="logout">Log out</string>
    <string name="logout_failure">logout failed</string>
    <string name="enter_password">Please enter password</string>
    <string name="save_wallet_file_warning">Please save your wallet file and private key,lost private key means lost funds.</string>
    <string name="check_my_transaction_records">Check my transaction records</string>
    <string name="no_transaction_records">No transaction record</string>
    <string name="transaction_records">Transaction records</string>
    <string name="transaction_records_symbol">Transaction records:</string>
    <string name="transaction_has_successfully">The transaction was sent successfully</string>
    <string name="transaction_has_failure">The transaction was sent failed，please try again later</string>
    <string name="transaction_has_successfully_and_the_number_is">The transaction has been sent successfully and the number is as follows</string>
    <string name="chick_to_copy">Click to copy</string>
    <string name="authorized_representative_can_not_be_modified">The authorized representative cannot be modified before the initial block is generated. The initial block is automatically generated after the first token is received</string>
    <string name="enter_address_of_the_authorized">Please enter the address of the authorized representative account</string>
    <string name="address_format_error">Address format error</string>
    <string name="change_successfully">Changed successfully</string>
    <string name="change_failed">Change failed</string>
    <string name="login_failure">Login failed, please try again later</string>
    <string name="password_rule_of_length">At least 8 to 16 digits and characters</string>
    <string name="password_rule_of_content">The password must contain Numbers and characters</string>
    <string name="password_entered_not_match">The passwords entered do not match</string>
    <string name="password_length_error">Password length error</string>
    <string name="please_log_in_first">You are not logged in, please log in first</string>
    <string name="confirm_logout">Confirm logout？</string>
    <string name="the_address_of_receiving_account_is_empty">The address of the receiving account is empty</string>
    <string name="the_address_of_receiving_account_is_error">Wrong address format for receiving account</string>
    <string name="private_key_error">Private key format error</string>
    <string name="insufficient_balance">Insufficient balance</string>
    <string name="file_format_error">File format error</string>
    <string name="please_upload_the_file">Please upload the file</string>
    <string name="the_file_is_damaged_please_upload_again">The file is damaged, please upload again</string>
    <string name="please_login_again">Please login again</string>
    <string name="scan_qr_code">Please scan qr code</string>
    <string name="double_click_for_exit">Press the return button again to exit the program</string>
    <string name="no_account_address_to_choose_from">Currently, there is no account address to choose from</string>
    <string name="transaction_to" formatted="false">To %s  </string>
    <string name="authorized_representative_address">Authorized representative account address</string>
    <string name="wallet_info">Wallet information</string>
    <string name="private_key">Private key</string>
    <string name="address_name">title of account</string>
    <string name="address">Address</string>
    <string name="save_data_failure">Save data failed</string>
    <string name="token">Currency</string>
    <string name="my_account">My account</string>
    <string name="balance">Balance</string>
    <string name="confirm_password">Confirm password</string>
    <string name="account_data_error">Account data error</string>
    <string name="data_acquisition_error">Data acquisition error</string>
    <string name="on_transaction">Trading is currently under way, please do not quit</string>
    <string name="on_trading">Trading is currently under way</string>
    <string name="please_enter_transaction_amount">Please enter transaction amount</string>
    <string name="successfully_copied">Successfully copied</string>
    <string name="confirm_delete">Confirm delete？</string>
    <string name="no_account_address_add">No account address for collection, please add</string>
    <string name="password_rule"><![CDATA[0123456789abcdefghigklmnopqrstuvwxyzQWERTYUIOPASDFGHJKLZXCVBNM!@#¥%^&*-_]]></string>
    <string name="to_setting_grant_permission">Click "Confirm" to jump to system settings to open permissions</string>
    <string name="network_not_reachable">Network connection error, please check your network settings</string>
    <string name="please_enter_address_name">Enter account name</string>
    <string name="please_enter_receive_account">Enter receiving account address</string>
    <string name="app_need_update">Your application needs to be updated. Click "Confirm" to start updating</string>
    <string name="address_over_quantity">Your address number has reached 100, please delete before adding</string>
    <string name="language_chinese_simplified">Chinese(Simplified)</string>
    <string name="lauguage_english">English</string>
    <string name="language_chinese_traditional">Chinese(Traditional)</string>
    <string name="brand_info">COPYRIGHT @ BCAAS,INC. ALL RIGHTS RESERVED</string>
    <string name="tv_transaction_detail" formatted="false">%s %s</string>
    <string name="network_connection_error">Network connection error</string>
    <string name="unable_to_trade_at_present">Unable to trade at present, failed to acquire balance</string>
    <string name="no_wallet">There is no wallet, please create or import a wallet first</string>
    <string name="address_repeat">Address repeated, please re-enter</string>
    <string name="address_name_repeat">Address name repeated, please re-enter</string>
    <string name="install_failed">Installation failed</string>
    <string name="cannot_send_email">Unable to send mail at this time</string>
    <string name="keystore_is_damaged">The file is damaged, please login again</string>
    <string name="email_subject">mail title</string>
    <string name="email_body">mail body</string>
    <string name="send_success">Sent successfully</string>
    <string name="send_fail">Failed to send</string>
    <string name="sending_wallet_same_as_receiving_wallet"> The sending account address cannot be the same as the receiving account address</string>
    <string name="create_wallet">Create wallet</string>
    <string name="incomplete_transaction">Incomplete transactions</string>
    <string name="version_name">Version  </string>
    <string name="change_server">Change server</string>
    <string name="show_more">Click to see more</string>
    <string name="login">Login</string>
    <string name="str_star">* </string>
    <string name="see">See</string>
    <string name="hide">Hide</string>
    <string name="amount_edit_digits">1234567890.</string>
    <string name="private_format">123456789ABCDEFGHJKLMNPQRSTUVWXYZabcdefghijkmnopqrstuvwxyz</string>
    <string name="data_str">Date</string>
    <string name="account_str">Account</string>
    <string name="amount_str">Amount</string>
    <string name="three_place_holders" formatted="false">%s %s %s</string>
    <string name="two_place_holders" formatted="false">%s %s</string>
    <string name="updating">Updating, please do not quit</string>
    <string name="next">Next step</string>
    <string name="yes">Got it</string>
    <string name="input_correct_password_unlock">Enter password to unlock BCAAS wallet.</string>
    <string name="touch_can_create_new_wallet">Click to register BCAAS wallet.</string>
    <string name="can_import_wallet">For existing BCAAS wallet owners, you can import BCAAS wallet with private key.
    </string>
    <string name="touch_copy_your_wallet_address">Click to copy your account address</string>
    <string name="touch_number_can_show_complete_amount">Click on the number to display full amount</string>
    <string name="touch_can_change_blockservice">Click to switch currency</string>
    <string name="choose_account_address">Choose account address</string>
    <string name="scan_account_address">Scan account address</string>
    <string name="guide_dot_to_switch_language">Click to switch language</string>
</resources>