<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:line="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_grey"
    android:orientation="vertical">

    <include layout="@layout/include_header" />

    <LinearLayout
        style="@style/bg_white_style"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/d60"
        android:orientation="vertical">

        <TextView
            style="@style/black_16_text_style"
            android:layout_marginTop="@dimen/d20"
            android:text="@string/account_address" />

        <TextView
            android:id="@+id/tv_account_address"
            style="@style/black70_14_text_style"
            android:layout_marginTop="@dimen/d16"
            android:maxLines="2" />

        <View
            style="@style/line_style"
            android:layout_marginTop="@dimen/d16" />

        <TextView
            style="@style/black_16_text_style"
            android:layout_marginTop="@dimen/d16"
            android:text="@string/backup_private_key" />

        <TextView
            style="@style/black30_14_text_style"
            android:layout_marginTop="@dimen/d16"
            android:text="@string/backup_private_key_detail" />

        <include
            layout="@layout/include_edit_text_private_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/d20"
            android:layout_marginTop="@dimen/d16" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_finish"
        style="@style/button_style"
        android:layout_marginLeft="@dimen/d12"
        android:layout_marginRight="@dimen/d12"
        android:layout_marginTop="@dimen/d30"
        android:text="@string/finish" />

</LinearLayout>