<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_grey"
    android:orientation="vertical">

    <include layout="@layout/inc_header" />

    <RelativeLayout
        style="@style/bg_white_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_address_key"
            style="@style/black_text_style"
            android:layout_marginTop="@dimen/d16"
            android:text="@string/my_account_address" />

        <ImageButton
            android:id="@+id/ib_copy"
            android:layout_width="@dimen/d12"
            android:layout_height="@dimen/d12"
            android:layout_alignBottom="@+id/tv_address_key"
            android:layout_alignParentRight="true"
            android:src="@mipmap/icon_copy" />

        <TextView
            android:id="@+id/tv_account_address_value"
            style="@style/black_text_style"
            android:layout_marginLeft="@dimen/d10"
            android:layout_marginTop="@dimen/d16"
            android:layout_toLeftOf="@+id/ib_copy"
            android:layout_toRightOf="@+id/tv_address_key"
            android:ellipsize="middle"
            android:gravity="center|right"
            android:textColor="@color/value_black70" />


        <TextView
            android:id="@+id/tv_currency_key"
            style="@style/black_text_style"
            android:layout_width="wrap_content"
            android:layout_below="@+id/tv_address_key"
            android:layout_marginTop="@dimen/d16"
            android:text="@string/currency" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/tv_currency_key"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/tv_address_key"
            android:layout_marginLeft="@dimen/d10"
            android:layout_marginTop="@dimen/d16"
            android:layout_toRightOf="@+id/tv_currency_key"
            android:gravity="bottom|right"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_currency"
                style="@style/black_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/d5"
                android:textSize="@dimen/text_size_12" />

            <Button
                android:id="@+id/btn_select_currency"
                android:layout_width="@dimen/d17"
                android:layout_height="@dimen/d17"
                android:background="@mipmap/icon_dropdown"
                android:paddingLeft="@dimen/d5"
                android:paddingRight="@dimen/d5" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_balance_key"
            style="@style/black_text_style"
            android:layout_below="@+id/tv_currency_key"
            android:layout_marginTop="@dimen/d16"
            android:text="@string/account_balance" />

        <TextView
            android:id="@+id/tv_balance"
            style="@style/black_text_style"
            android:layout_width="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/tv_currency_key"
            android:layout_marginBottom="@dimen/d10"
            android:layout_marginLeft="@dimen/d10"
            android:layout_marginTop="@dimen/d16"
            android:layout_toRightOf="@+id/tv_balance_key"
            android:gravity="center|right"
            android:textColor="@color/orange_yellow"
            tools:text="0" />

        <ProgressBar
            android:id="@+id/pb_balance"
            android:layout_width="@dimen/d20"
            android:layout_height="@dimen/d20"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/tv_currency_key"
            android:layout_marginRight="@dimen/d5"
            android:layout_marginTop="@dimen/d16"
            android:gravity="center|right"
            android:indeterminateTint="@color/orange_yellow"
            android:visibility="gone" />


    </RelativeLayout>

    <LinearLayout
        style="@style/bg_white_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/black_text_style"
            android:layout_marginTop="@dimen/d20"
            android:text="@string/private_key" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d16"
            android:text="@string/save_private_key_hint"
            android:textColor="@color/value_black70"
            android:textSize="@dimen/text_size_14" />

        <include layout="@layout/inc_et_private_key" />
    </LinearLayout>

    <LinearLayout
        style="@style/bg_white_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            style="@style/black_text_style"
            android:layout_marginTop="@dimen/d20"
            android:text="@string/email_json" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/d16"
            android:text="@string/email_json_rule"
            android:textColor="@color/value_black70"
            android:textSize="@dimen/text_size_14" />

        <Button
            android:id="@+id/btnSendEmail"
            style="@style/btn_style"
            android:layout_marginBottom="@dimen/d20"
            android:layout_marginTop="@dimen/d20"
            android:text="@string/send_email" />
    </LinearLayout>

</LinearLayout>
